# ImperialEngine2

./: .gitignore  CMakeLists.txt  run_compile_release.bat
AndroidStudio/: gradle.properties  settings.gradle
AndroidStudio/app/: build.gradle
AndroidStudio/app/src/main/: AndroidManifest.xml
AndroidStudio/app/src/main/cpp/: CMakeLists.txt  main.cpp
AndroidStudio/app/src/main/res/values/: strings.xml  themes.xml
AndroidStudio/app/src/main/res/values-night/: themes.xml
Projects/HelloImperialEngine/: CMakeLists.txt  main.cpp  run_compile_debug.bat
Source/: Engine.cpp  Engine.h
